# cwl2nx

./: .gitignore  README.md  cwl2nx.py  dev_readme.md  example.ipynb  example.py  pyproject.toml  workflow_example.cwl.yaml
cwl2nx/: __init__.py  cli.py  cwl2nx.py  term_viz.py
cwl2nx/src/: cwl2nx.py
doc/: dev_guide.md  plant2human_v2.yaml
