[project]
name = "cwl2nx"
version = "0.0.12"
requires-python = ">= 3.12"
description = "Lightweight python module to load, validate and visualize CWL (Common Workflow Language) files through networkx graphs."
authors = [
    { name = "Marius Garénaux Gruau", email = "marius.garenaux-gruau@irisa.fr" },
]
maintainers = [
    { name = "Marius Garénaux Gruau", email = "marius.garenaux-gruau@irisa.fr" },
]
readme = "README.md"
keywords = ["cwl", "workflow", "graphs", "networkx", "visualization"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "cwl-utils>=0.40",
    "networkx>=3.6",
    "pyyaml>=6.0.3",
    "termcolor>=3.2.0",
    "typer>=0.20.0",
    "typing-extensions>=4.15.0",
]
license = "APACHE-2.0"
license-files = ["LICENSE-2.0.txt"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project.scripts]
cwl2nx = "cwl2nx.cli:app"

[project.urls]
Repository = "https://github.com/mariusgarenaux/cwl2nx"

[tool.setuptools.packages.find]
where = ["."]
include = ["cwl2nx"]

[dependency-groups]
dev = ["build>=1.3.0", "twine>=6.2.0"]
